--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,4 @@ sidebar:
     link: https://github.com/vladisai
   - name: CV
     icon: <i class="fa-solid fa-file"></i>
-    link: https://github.com/vladisai
+    link: https://raw.githubusercontent.com/vladisai/vladisai.github.io/master/CV.pdf
