--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,5 @@ sidebar:
   - name: CV
     icon: <i class="fa-solid fa-file"></i>
     link: https://raw.githubusercontent.com/vladisai/vladisai.github.io/master/CV.pdf
-  - name: Email: us441 at nyu edu
+  - name: Email us441 at nyu edu
     icon: <i class="fa fa-envelope"></i>
