--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ sidebar:
     icon: <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
     link: https://www.linkedin.com/in/vladisai/
   - name: Twitter
-    icone: <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+    icon: <i class="fa-brands fa-twitter" aria-hidden="true"></i>
     link: https://x.com/vlad_is_ai
   - name: CV
     icon: <i class="fa-solid fa-file"></i>
